# Spotify

./: LICENSE  README.md
Code/: boringText.c  boringText.h  main.c  print_shuffle.c  print_shuffle.h  print_sort.c  print_sort.h  shuffle.c  shuffle.h  shuffled_playlist.txt  sort.c  sort.h  sorted_playlist.txt  utilities.h  yess.txt
Code/CMake/: CMakeLists.txt
Sample Input & Outputs/Assignment requirement/: shuffled_playlist.txt
Sample Input & Outputs/Sample 1/: shuffled_playlist.txt  sorted_playlist.txt
Sample Input & Outputs/Sample 2/: 1 (1).txt  1 (2).txt
Sample Input & Outputs/Sample 3/: sample_song_file3.txt  shuffled_playlist.txt  sorted_playlist.txt
